--- a/abccaretreatmenteffects_report_main_appendix.tex
+++ b/abccaretreatmenteffects_report_main_appendix.tex
@@ -42,22 +42,22 @@ The University of Chicago}
 
 \subsubsection{Overview}
 
-\noindent The Carolina Abecedarian Project was a high-quality early childhood education program with two phases of randomized controlled design. It was implemented at the Frank Porter Graham of the University of North Carolina in Chapel Hill and served four cohorts of children between the years 1972 and 1977. In the main paper, we explain the fundamental components of the program, as well as its design and follow-up implementation as they relate to the program's usefulness for analyzing early childhood education. In this section of the appendix, we expand on additional important details of the program's implementation.
+\noindent The Carolina Abecedarian Project was a high-quality early childhood education program with two phases of randomized controlled design. It was implemented at the Frank Porter Graham of the University of North Carolina in Chapel Hill and served four cohorts of children from 1972 to 1977. In the main paper, we explain the fundamental components, the design, and the follow-up implementation of the program, as they relate to the program's usefulness for analyzing early childhood education. In this section of the appendix, we expand on additional important details of the program's implementation.
 
 \subsubsection{Eligibility Criteria and Populations Served}
 
-\noindent The mothers of the ABC participant children were typically recruited during the last trimester  of pregnancy. Potential families were referred by local social service agencies and hospitals. Eligibility was determined by a score of 11 or more on a weighted 13-factor High-risk Index (HRI).\\ 
+\noindent The mothers of the ABC participant children were typically recruited during the last trimester  of pregnancy. Potential families were referred by local social service agencies and hospitals. Eligibility was determined by a score of 11 or more on a weighted 13-factor High-Risk Index (HRI).\\ 
 
-\noindent The HRI was based on 13 weighted variables, which are listed here with weights in parentheses: (i) maternal education level measured by years of education - ≤6 (8), 7 (7), 8 (6), 9 (3), 10 (2), 11 (1), ≥12 (0); (ii) paternal education level with weights identical to those for maternal education; (iii) yearly family income measured in current dollars - ≤1,000 (8), 1,001-2000 (7), 2,001-3,000 (6), 3,001-4,000 (5), 4,001-5,000 (4), ≥ 5,001 (0); (iv) father's absence from the household for reasons other than health or death (3); (v) lack of maternal relatives in the area (3); (vi) siblings of school age one or more grades behind age-appropriate level, or with equivalently low scores on school-administered achievement tests (3); (vii) received payments from welfare agencies within past 3 years (3); (viii) record of father's work indicates instability or unskilled and semi-skilled labor (3); (ix) record of maternal or paternal IQ score of 90 or below (3); (x) record of sibling IQ score of 90 or below (3); (xi) relevant social agencies in the community indicate the family is in need of assistance (3); (xii) one or more family members has sought counseling or professional help in the past 3 years (1); and (xiii) special circumstances not included in any of the above that are likely contributors to cultural or social disadvantage (1).\footnote{\citet{Ramey_Smith_1977_AJMD, Ramey_Campbell_1984_AJMD,Ramey_Campbell_1991_childreninpoverty,Ramey_Campbell_etal_2000_ADS}.} The weighting scale aimed to establish the relevant importance of each item in the index.\footnote{\citet{Ramey_Smith_1977_AJMD}.} Race was not  considered for eligibility; however, 98\% of the families who agreed to participate were African-American.\footnote{\citet{Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR}.} \\
+\noindent The HRI was based on 13 weighted variables, which are listed here with weights in parentheses: (i) maternal education level measured by years of education - ≤6 (8), 7 (7), 8 (6), 9 (3), 10 (2), 11 (1), ≥12 (0); (ii) paternal education level with weights identical to those for maternal education; (iii) yearly family income measured in current dollars - ≤1,000 (8), 1,001-2000 (7), 2,001-3,000 (6), 3,001-4,000 (5), 4,001-5,000 (4), ≥ 5,001 (0); (iv) father's absence from the household for reasons other than health or death (3); (v) lack of maternal relatives in the area (3); (vi) siblings of school age one or more grades behind age-appropriate level, or with equivalently low scores on school-administered achievement tests (3); (vii) received payments from welfare agencies within the past 3 years (3); (viii) record of father's work indicates instability or unskilled and semi-skilled labor (3); (ix) record of maternal or paternal IQ score of 90 or below (3); (x) record of sibling IQ score of 90 or below (3); (xi) relevant social agencies in the community indicate the family is in need of assistance (3); (xii) one or more family members has sought counseling or professional help in the past 3 years (1); and (xiii) special circumstances not included in any of the above that are likely contributors to cultural or social disadvantage (1).\footnote{\citet{Ramey_Smith_1977_AJMD, Ramey_Campbell_1984_AJMD,Ramey_Campbell_1991_childreninpoverty,Ramey_Campbell_etal_2000_ADS}.} The weighting scale aimed to establish the relevant importance of each item in the index.\footnote{\citet{Ramey_Smith_1977_AJMD}.} Race was not  considered for eligibility; however, 98\% of the families who agreed to participate were African-American.\footnote{\citet{Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR}.} \\
 
 \begin{center}
 	\begin{figure}[H]
-		\caption{High-risk Index Distribution, ABC} \label{figure:hridistabc}
+		\caption{High-Risk Index Distribution, ABC} \label{figure:hridistabc}
 		\centering
 		\includegraphics[width=.9\columnwidth]{output/abc_hri.eps}
 \floatfoot{
 \footnotesize
-\noindent Note: This plot shows the distribution of the High-risk Index (HRI) on which eligibility was based on. Children were eligible if they had a score of 11 or more.}
+\noindent Note: This plot shows the distribution of the High-Risk Index (HRI) on which eligibility was based. Children were eligible if they had a score of 11 or more.}
 	\end{figure}
 \end{center}
 
@@ -75,12 +75,12 @@ The University of Chicago}
 \floatfoot{
 \footnotesize
 \noindent
-Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_Campbell_1984_AJMD}, internal documentation of the program, and own calculations. Note: The variable R represents randomization into treatment [R=1] or control [R=0] groups. After the original randomization, some children died or withdrew from the program early in life and were replaced. R also includes those replacements. Arrows pointing outside the diagram indicate children who left the study permanently. The variable P represents participation in the preschool-age program. The variable SR represents randomization into the school-age program [SR=1], or out of it [SR=0]. Some children were not randomized at school age [SR=No]. We use the term temporary attrited for children who did not participate in the study at school age, but were later interviewed in the age-21 followup.
+Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_Campbell_1984_AJMD}, internal documentation of the program, and own calculations. Note: The variable R represents randomization into treatment [R=1] or control [R=0] groups. After the original randomization, some children died or withdrew from the program early in life and were replaced. R also includes those replacements. Arrows pointing outside of the diagram indicate children who left the study permanently. The variable P represents participation in the preschool-age program. The variable SR represents randomization into the school-age program [SR=1], or out of it [SR=0]. Some children were not randomized at school age [SR=No]. We use the term temporary attrited for children who did not participate in the study at school age, but were later interviewed in the age-21 followup.
 }
 	\end{figure}
 \end{center}
 
-\noindent Although most randomization compromises were at early stages, this methodology also accounts for the fact that a few individuals were not in the sample either for the second-phase randomization or for the adult-age follow-ups. The following set of tables tests differences in observed characteristics between the treatment and control groups. We test differences both by cohort and pooling the four cohorts. Despite the randomization compromises, we only find slight differences in observed characteristics between the children in the treatment and the control group. In Appendix~\ref{appendix:data}, we describe the sample reductions that attrition at different stages of the study generates and test potential differences between the children who were followed-up on and the children who were not.\\
+\noindent Although most randomization compromises were at early stages, this methodology also accounts for the fact that a few individuals were not in the sample either for the second-phase randomization or for the adult-age follow-ups. The following tables test differences in observed characteristics between the treatment and control groups. We test differences both by cohort and by pooling the four cohorts. Despite the randomization compromises, we only find slight differences in observed characteristics between the children in the treatment and the control group. In Appendix~\ref{appendix:data}, we describe the sample reductions that attrition at different stages of the study generates and test potential differences between the children who were followed-up on and the children who were not.\\
 
 \subsubsection{Program Description and Content}
 
@@ -89,18 +89,18 @@ Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1
 
 
 \paragraph{Daily Schedule}
-\noindent FPGC was open to families from 7:45 am to 5:30 pm, 5 days per week and 50 weeks per year.\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject}.} Children were offered free transportation to and from the center. A driver and second adult staffed each vehicle (one van and two station wagons) equipped with child safety seats.\footnote{\citet{Ramey_Campbell_1979_SR,abc2014-2015interviews}.} Data provided by FPGC indicates that approximately 65\% of treated families utilized the free transportation.\footnote{\citet{Barnett_Masse_2002_benefitcost}.} Vehicles typically arrived by 9:00 am and departed around 3:45 pm.\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC}.} At FPGC, Treated children received breakfast, lunch, and a snack planned by a nutritionist.\footnote{ \citet{Haskins_1985_CD,Ramey-et-al_1977_Intro-to-ABC}.} Infants received iron-fortified formula until doctors advised adding solid foods.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments,abc2014-2015interviews}.} Meals were catered by off-site kitchens. \\
+\noindent FPGC was open to families from 7:45 am to 5:30 pm, 5 days per week and 50 weeks per year.\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject}.} Children were offered free transportation to and from the center. A driver and second adult staffed each vehicle (one van and two station wagons) equipped with child safety seats.\footnote{\citet{Ramey_Campbell_1979_SR,abc2014-2015interviews}.} Data provided by FPGC indicate that approximately 65\% of treated families utilized the free transportation.\footnote{\citet{Barnett_Masse_2002_benefitcost}.} Vehicles typically arrived by 9:00 am and departed around 3:45 pm.\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC}.} At FPGC, Treated children received breakfast, lunch, and a snack planned by a nutritionist.\footnote{ \citet{Haskins_1985_CD,Ramey-et-al_1977_Intro-to-ABC}.} Infants received iron-fortified formula until doctors advised adding solid food.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments,abc2014-2015interviews}.} Meals were catered by off-site kitchens. \\
 
 \paragraph{Program Staff and Physical Space}
 \noindent Treatment staff were recruited from the local community to promote trust in FPGC within the treatment community.\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC,Feagans_1996_Childrens-Talk,abc2014-2015interviews}.} Infant and toddler caregivers and preschool teachers demonstrated varied educational backgrounds ranging from high school graduation to master's degrees. Their average professional working experience with young children was 7 years.\footnote{\citet{Ramey_McGinness_etal_1982_Abecedarianapproach}.} All classroom staff participated in extensive training and were closely observed by FPGC's academic staff, as part of a broad variety of ongoing clinical and social research related to early childhood education, psychology, and health. Child-adult ratios varied by age: 3:1 for infants up to 13 to 15 months of age; 4:1 for toddlers up to 36 months; and 5:1 or 6:1 for children aged 3 to 5 years, depending on cohort size.\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach}.}\\
 
 \noindent The ABC staff included a program director, a secretary, 12 to 14 teachers and assistant teachers, 3 administrative staff members, and a transportation supervisor.\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC,Ramey_McGinness_etal_1982_Abecedarianapproach}.} Classroom staff included infant caregivers and preschool teachers who had an average of 7 years of experience in early childhood care at hiring. Lead caregivers and teachers had bachelor's or master's degrees. Teacher aides, recruited from the local community, held high school diplomas (at minimum) and were comparatively well-compensated in the childcare field. They remained a stable treatment component throughout the study. Classroom staff received weekly training, daily supervision, and frequent professional development from outside consultants.\footnote{\citet{Obrien-Sanders_1974_ABC-brochure,Sanders-Stokes_1979_Status-Report,Klein-Sanders_1982_Status-Report,abc2014-2015interviews}.}\\
 
-\noindent Infant nurseries, toddler, and preschool classrooms were housed on different floors of FPGC. Early reports indicate that FPGC allocated two floors to the study, but later reports indicate the use of three floors.\footnote{\citet{Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_1981_Modification}.} Two infant nurseries were staffed by five adults in a suite of four adjoining rooms: two sleeping rooms contained seven cribs each, while the other two rooms were designated for activities.\footnote{ \citet{Ramey-et-al_1977_Intro-to-ABC}.} The four rooms opened into a large, shared space with feeding tables, an area for food preparation, and a couch.\footnote{\citet{Ramey_Campbell_1979_SR}.} Offices for the medical staff, along with two examining rooms and facilities for laboratory tests were located around the corner from the infant nurseries.\footnote{\citet{abc2014-2015interviews}.} Two multi-age toddler rooms were located one floor below the infant nurseries. One room served children who were 1 to 2 years old and the other served children 2 to 3 years old.\footnote{\citet{Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR}.} Three-year-olds were housed in a closed classroom near the toddler rooms. On the lowest floor, 4-year-olds shared an open classroom with a public kindergarten program; the two classes were separated by a long, low bookcase. FPGC offered two outdoor play areas: one for toddlers and 3-year-olds, and another for older children.\footnote{\citet{Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach}.}\\
+\noindent Infant nurseries, toddler rooms, and preschool classrooms were housed on different floors of FPGC. Early reports indicate that FPGC allocated two floors to the study, but later reports indicate the use of three floors.\footnote{\citet{Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_1981_Modification}.} Two infant nurseries were staffed by five adults in a suite of four adjoining rooms: two sleeping rooms contained seven cribs each, while the other two rooms were designated for activities.\footnote{ \citet{Ramey-et-al_1977_Intro-to-ABC}.} The four rooms opened into a large, shared space with feeding tables, an area for food preparation, and a couch.\footnote{\citet{Ramey_Campbell_1979_SR}.} Offices for the medical staff, along with two examining rooms and facilities for laboratory tests were located around the corner from the infant nurseries.\footnote{\citet{abc2014-2015interviews}.} Two multi-age toddler rooms were located one floor below the infant nurseries. One room served children who were 1 to 2 years old and the other served children 2 to 3 years old.\footnote{\citet{Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR}.} 3-year-olds were housed in a closed classroom near the toddler rooms. On the lowest floor, 4-year-olds shared an open classroom with a public kindergarten program; the two classes were separated by a long, low bookcase. FPGC offered two outdoor play areas: one for toddlers and 3-year-olds, and the other for older children.\footnote{\citet{Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach}.}\\
 
 \paragraph{Approach to Child Development}
 %Direct from the paper
-\noindent Curriculum delivery enabled a highly customized learning experience for ABC-treated children. Infant caregivers recorded child observations on progress charts and collaborated with FPGC's curriculum developers and academic researchers to rotate learning activities every 2 to 3 weeks for each treated child.\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject,Campbell_Ramey_1994_CD}.} Preschool rooms featured intentionally organized environments to promote pre-literacy and access to a rich set of learning tools. The full-day curriculum emphasized active learning experiences, dramatic play, and pre-academics. Frequent 1:1 or 2:1 child-adult interactions prioritized language development for social competence. For ages 3 through 5, as the cohorts approached public school entry, classroom experiences were increasingly structured  towards development of pre-academic skills and ``socio-linguistic and communicative competence.''\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC, Haskins_1985_CD, Ramey_1981_Modification, Ramey_Campbell_1979_SR, Ramey_Smith_1977_AJMD, Ramey_McGinness_etal_1982_Abecedarianapproach, Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}.}\\
+\noindent Curriculum delivery enabled a highly customized learning experience for ABC-treated children. Infant caregivers recorded child observations on progress charts and collaborated with FPGC's curriculum developers and academic researchers to rotate learning activities every 2 to 3 weeks for each treated child.\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject,Campbell_Ramey_1994_CD}.} Preschool rooms featured intentionally organized environments to promote pre-literacy and access to a rich set of learning tools. The full-day curriculum emphasized active learning experiences, dramatic play, and pre-academics. Frequent 1:1 or 2:1 child-adult interactions prioritized language development for social competence. For ages 3 through 5, as the cohorts approached public school entry, classroom experiences were increasingly structured  towards the development of pre-academic skills and ``socio-linguistic and communicative competence.''\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC, Haskins_1985_CD, Ramey_1981_Modification, Ramey_Campbell_1979_SR, Ramey_Smith_1977_AJMD, Ramey_McGinness_etal_1982_Abecedarianapproach, Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}.}\\
 
 \noindent ABC's learning program was influenced by key developmental theorists, including Bowlby, Piaget, Vygotsky, and Tough.\footnote{\citet{Sparling_1974_Synth_Edu_Infant_SPEECH,Mcginness_1981_Developing,abc2014-2015interviews}.} All four ABC cohorts participated in curriculum developers Sparling and Lewis' ``Learningames for the First Three Years.''\footnote{ \citet{Sparling_Lewis_1979_BOOKLearninggamesFirstThree}.} The ``Learningames'' were implemented daily by infant and toddler caregivers in 1:1 child-adult interactions. Designed for use indoors and outdoors, while dressing, eating, bathing, or during play, each ``Learningames'' activity stated a developmentally-appropriate objective, the necessary materials, directions for teacher behavior, and expected child outcome.\footnote{\citet{Ramey_Campbell_1979_SR, Ramey_1981_Modification,Sparling_Lewis_1979_BOOKLearninggamesFirstThree}.}\\
 
@@ -144,7 +144,7 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Campbell_Conti_et
 
 \noindent During the ABC program, North Carolina had an active, high-quality system of public childcare for vulnerable families funded by several public programs . Examples include Title IV-A of the Social Service Administration (SSA), Aid to Families with Dependent Children (AFDC), and Title IV-B of Child Welfare Services. These funding efforts were amplified in 1975 by Title XX of the SSA, Social Sciences Block Grant, which was the main federal source of childcare financing in the US when ABC was active.\footnote{Consistently, control-group children in ABC had lower access if they belonged to the 1972-1975 cohorts, if compared to the post-1975 cohorts.}$^{,}$\footnote{\citet{Robins_1988_Federal-Child-Care}.}\\
 
-\noindent Federally funded childcare services were regulated by the Federal Interagency of Day Care Requirements, which defined stringent regulation for center-based programs for children between the ages of 3 and 6.\footnote{\citet{Department-of-Health_1968_DayCareRequirements}.} These requirements were enforced and childcare providers were aware of them.\footnote{\citet{Kuperman_2015_Clifford-Russell-Interview}.} Additionally, North Carolina had a mandatory licensing law for childcare facilities. This regulation only applied to centers serving children below the age of 3 while FIDCR applied to centers for older children (between the ages of 3 and 6). The relative weakness of this regulation\footnote{\citet{NCGA_1971_House-Bill-100}.} is not very relevant for our study because treatment substitution occurred mostly after age 3. Table~\ref{table:staff} compares a widely-used quality standard, the child-staff ratio, between the North Carolina and FIDCR standards and the actual ABC numbers.
+\noindent Federally funded childcare services were regulated by the Federal Interagency of Day Care Requirements (FIDCR), which defined stringent regulation for center-based programs for children between the ages of 3 and 6.\footnote{\citet{Department-of-Health_1968_DayCareRequirements}.} These requirements were enforced and childcare providers were aware of them.\footnote{\citet{Kuperman_2015_Clifford-Russell-Interview}.} Additionally, North Carolina had a mandatory licensing law for childcare facilities. This regulation only applied to centers serving children below the age of 3 while FIDCR applied to centers for older children (between the ages of 3 and 6). The relative weakness of this regulation\footnote{\citet{NCGA_1971_House-Bill-100}.} is not very relevant for our study because treatment substitution occurred mostly after age 3. Table~\ref{table:staff} compares a widely-used quality standard, the child-staff ratio, between the North Carolina and FIDCR standards and the actual ABC numbers.
 
 %Not in main paper
 \begin{table}[H]
@@ -173,7 +173,7 @@ Note: The starred ratios represent the ones we believe were the most relevant fo
 
 \paragraph{Costs}
 
-\noindent Center-based childcare centers had a uniform rate for subsidy-eligible children, independent of which program the children were they eligible for. This was mandated by the County Department of Social Services. The most common way for a child to be eligible was by belonging to a poor family with either a single mother who worked or studied or with both parents who either worked or studied. Other conditions, such as abuse risk, were also considered. Our information on the rates paid is limited, but anecdotal evidence indicates that the subsidy value for full-time center-based childcare was around \$300 at the time.\footnote{\citet{Kuperman_2015_Clifford-Russell-Interview}.}
+\noindent Center-based childcare centers had a uniform rate for subsidy-eligible children, independent of which program the children were eligible for. This was mandated by the County Department of Social Services. The most common way for a child to be eligible was by belonging to a poor family with either a single mother who worked or studied or with both parents who either worked or studied. Other conditions, such as abuse risk, were also considered. Our information on the rates paid is limited, but anecdotal evidence indicates that the subsidy value for full-time center-based childcare was around \$300 at the time.\footnote{\citet{Kuperman_2015_Clifford-Russell-Interview}.}
 
 \subsubsection{Data} \label{appendix:data}
 
@@ -189,9 +189,9 @@ Note: This plot shows the number of participants, by experimental group, for who
 }
 \end{figure}
 
-\noindent Attrition was low. Information is available on 100 children in the age 30 follow-up. Figure~\ref{fig:abc-flow} describes the flow of retention through all follow-ups. Additionally, 88 participants (45 and 43 from the control and treatment groups respectively) consented to release their criminal records and 70 participants (31 and 39 from the control and treatment groups respectively) released information on a full-range biomedical sweep. The data includes measures such as prevalence of diabetes and high blood pressure, waist-to-hip ratio, height and weight, and cholesterol levels.\\ 
+\noindent Attrition was low. Information is available on 100 children in the age 30 follow-up. Figure~\ref{fig:abc-flow} describes the flow of retention through all follow-ups. Additionally, 88 participants (45 from the control group and 43 from the treatment group) consented to release their criminal records and 70 participants (31 from the control group and 39 from the treatment group) released information on a full-range biomedical sweep. The data include measures such as prevalence of diabetes and high blood pressure, waist-to-hip ratio, height, weight, and cholesterol levels.\\ 
 
-\noindent In the following set of tables, we compare the observed, baseline characteristics between the first-stage control and treatment groups, which are the main groups we analyze, at different stages of the data collection follow-ups. For each observed characteristic, we present the bootstrapped, $p$-value associated with the standard $t$-test. We also present the bootstrapped, step-down $p$-value on jointly testing the difference in observed characteristics across the two blocks of variables separated by the horizontal line \citep{Lehmann_Romano_2005_testing}.
+\noindent In the following set of tables, we compare the observed, baseline characteristics between the first-stage control and treatment groups, which are the main groups we analyze, at different stages of the data collection follow-ups. For each observed characteristic, we present the bootstrapped $p$-value associated with the standard $t$-test. We also present the bootstrapped, step-down $p$-value on jointly testing the difference in observed characteristics across the two blocks of variables separated by the horizontal line \citep{Lehmann_Romano_2005_testing}.
 
 \noindent First, we compare the first-phase treatment and control groups on baseline characteristics. 
 
@@ -227,7 +227,7 @@ Note: This plot shows the number of participants, by experimental group, for who
 
 \input{output/health_balance}
 
-\noindent Despite some exceptions, this set of tables indicates balance between the first-phase treatment and control groups, which is the primary comparison we analyze in the main paper. The balance in observed characteristics holds for the different samples we consider, which differs from the initial sample due to various instances of item non-response. For the second-phase randomization, there is also balance in observed characteristics.
+\noindent Despite some exceptions, these tables indicate balance between the first-phase treatment and control groups, which is the primary comparison we analyze in the main paper. The balance in observed characteristics holds for the different samples we consider, which differs from the initial sample due to various instances of item non-response. For the second-phase randomization, there is also balance in observed characteristics.
 
 \subsection{CARE}
 
@@ -257,7 +257,7 @@ Note: This plot shows the number of participants, by experimental group, for who
 
 \noindent \textbf{1. Neither in cohort 3 nor in cohort 4 do mothers differ in observed characteristics between the treatment and the control groups.} When jointly testing the hypothesis of differences in a battery of observed characteristics, we fail to reject any difference between the families of these children (see Table~\ref{tab:baseline_coh3} and Table~\ref{tab:baseline_coh4}). Even when the point estimates present some differences, they are minimal. For example, treatment-group mothers differ from control-group mothers, on average, by having one more point in the IQ score, which has a population standard deviation of 15.\\
 
-\noindent \textbf{2. Other early childhood education programs have generated gains in cognition very early in life, as soon as after a year of the program's beginning.} A more recent program, the Infant Health and Development Program (IHDP), treated children from ages 0 to 3. \citet{Gross_Spiker_etal_1997_BOOKHelpinglowbirth} thoroughly describe this program. A lot of its elements were based on ABC and CARE. The program offered an average of eight hours a week of center-based childcare from ages 1 to 3, weekly home visits from ages 0 to 1, and bi-monthly home visits from ages 1 to 3. Measures on the Bayley MDI at 12 and 24 months are available. The most intensive part of the treatment, center-based childcare, began at age 12 months in IHDP while it began at birth in ABC. As in ABC, after a few months of center-based childcare, the effects on cognition were substantial in IHDP.
+\noindent \textbf{2. Other early childhood education programs have generated gains in cognition very early in life, as soon as a year after the program begins.} A more recent program, the Infant Health and Development Program (IHDP), treated children from ages 0 to 3. \citet{Gross_Spiker_etal_1997_BOOKHelpinglowbirth} thoroughly describe this program. A lot of its elements were based on ABC and CARE. The program offered an average of eight hours a week of center-based childcare from ages 1 to 3, weekly home visits from ages 0 to 1, and bi-monthly home visits from ages 1 to 3. Measures on the Bayley MDI at 12 and 24 months are available. The most intensive part of the treatment, center-based childcare, began at age 12 months in IHDP while it began at birth in ABC. As in ABC, after a few months of center-based childcare, the effects on cognition were substantial in IHDP.
 \input{output/ihdp_bayley}
 
 \noindent \textbf{3. The effects on cognition are sustained throughout childhood and up to age 21 even when partialing out the Bayley MDI at ages 12 and 24 months.} When partialing out in a linear regression the score in the Bayley MDI tests both at twelve and twenty-four months of age, the treatment effects on cognition, measured by the mean difference between the treatment and the control groups in different IQ test scores, are still significant and are sustained up to age 21 (see Figure~\ref{fig:treatiqsabc}).
@@ -270,7 +270,7 @@ Note: This plot shows the number of participants, by experimental group, for who
 \noindent Note: This figure displays the mean difference between the treatment and the control groups in IQ at different ages, pooling males ans females. The dotted line represents the raw difference. The squared line represents the difference when linearly controlling for the Bayley Mental Development Index at 6 and 12 months.}
 \end{figure}
 
-\noindent The author raises an additional concern. He states that even if the early-life effects on the Bayley MDI were true, the effects were not long-lasting. When doing so, he exclusively refers to the effects the program had on cognition. As we vastly document throughout the main paper, however, ABC had effects on a wide set of life-cycle outcomes, which perhaps are more important than the effects on cognition if measures by the economic gains they generate. Examples include: employment at age 30 for males, high-school graduation for females, and a variety of health measures at age 34 for males. We document these effects in the main paper.\\
+\noindent The author raises an additional concern. He states that even if the early-life effects on the Bayley MDI were true, the effects were not long-lasting. When doing so, he exclusively refers to the effects the program had on cognition. As we vastly document throughout the main paper, however, ABC had effects on a wide set of life-cycle outcomes, which perhaps are more important than the effects on cognition if measured by the economic gains they generate. Examples include: employment at age 30 for males, high-school graduation for females, and a variety of health measures at age 34 for males. We document these effects in the main paper.\\
 
 \noindent This critique relates to a second critique that has been made to ABC. Mostly based on the fade-out of the effects on cognition and on results on age-21 outcomes, some studies claim that ABC had no sustained long-term effects. In addition to the evidence we cite above, it is important to add the following. \textbf{4. The treatment effects of ABC differed by gender.} For example, we find substantial effects on employment for males and high-school graduation for females. This does not mean that the program did not work. It means that market conditions could affect the way in which the participants of the program could have benefited from its effects.\\
 
@@ -331,7 +331,7 @@ Case & Child ID & Initial Assignment & Compromise Description & Data Availabilit
 
 \noindent where $R$ indicates randomization into treatment, $D$ indicates treatment take-up, and $Y$ is an outcome of interest.\\
 
-\noindent This estimator has gained attention as it coincides with the instrumental variables estimator of the parameter in linear regression of an outcome on a single explanatory variable, e.g. treatment take-up. As \citet{Angrist_Imbens_ea_1996_JASA} show, under certain assumptions it can be interpreted as the average treatment effect for those individuals induced to take up treatment by the instrument. These interpretation has various weaknesses \citep{Heckman_Urzua_2010_JoE,Heckman_Urzua_etal_2006_REStat}.\\
+\noindent This estimator has gained attention as it coincides with the instrumental variables estimator of the parameter in linear regression of an outcome on a single explanatory variable, e.g. treatment take-up. As \citet{Angrist_Imbens_ea_1996_JASA} show, under certain assumptions it can be interpreted as the average treatment effect for those individuals induced to take up treatment by the instrument. This interpretation has various weaknesses \citep{Heckman_Urzua_2010_JoE,Heckman_Urzua_etal_2006_REStat}.\\
 
 \noindent To compare the mean difference and the Bloom estimator we consider two measures of cognition, which are commonly used when evaluating ABC and are available for children 900, 912, 922, and 78: the Stanford Binet IQ test at age 3 and the Wechsler Preschool and Primary Scale of Intelligence. Table~\ref{table:nc1} presents the results and shows that the differences are minimal. \textbf{5. Adjusting for the non-compliance of children 900, 912, 922, and 78 makes little difference} when assessing outcomes for which we observe these children. 
 
@@ -341,7 +341,7 @@ Case & Child ID & Initial Assignment & Compromise Description & Data Availabilit
 
 \input{output/abc_noncomp_e2}
 
-\noindent Finally, we note that our methodology in Section~\ref{section:methodology} and the results we present in Section~\ref{section:results} account for the reminder of randomization compromises, as when the families moved or abandoned the study later in the study. \textbf{7. The results are not greatly sensitive to adjusting for the rest of randomization compromises}, as we show in Section~\ref{section:results}.
+\noindent Finally, we note that our methodology in Section~\ref{section:methodology} and the results we present in Section~\ref{section:results} account for the remainder of randomization compromises, as when the families moved or abandoned the study later in the study. \textbf{7. The results are not greatly sensitive to adjusting for the rest of randomization compromises}, as we show in Section~\ref{section:results}.
 
 \end{appendices}
 
